--- a/index.html
+++ b/index.html
@@ -90,9 +90,6 @@ img {
 .tabbed-pane {
   padding-top: 12px;
 }
-.html-widget {
-  margin-bottom: 20px;
-}
 button.code-folding-btn:focus {
   outline: none;
 }
@@ -128,7 +125,7 @@ $(document).ready(function () {
 <h2>A comprehensive analysis of the niche space estimates</h2>
 <div id="step-1.-data" class="section level3">
 <h3>Step 1. Data</h3>
-<p>Load in species-level list data. Load in rii data. Calculate a mean rii, se of rii, record year.</p>
+<p>Load in species-level list data. Load in rii data. Calculate a mean rii, se of rii, record the year associated with rii estimate.</p>
 </div>
 <div id="step-2.-categorize" class="section level3">
 <h3>Step 2. Categorize</h3>
